Edit ../index.html and chicken-teriyaki.html and teriyaki.webp and tuna.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@ Odin Recipes
 <h1>
     Odin Recipes
 </h1>
-<a href="./recipes/tuna.html" target="_blank" rel="noopener noreferrer">Tuna steaks with mushroom sauce and cuscus
-</a>
+<p><a href="./recipes/tuna.html" target="_blank" rel="noopener noreferrer">Tuna Steaks with Mushroom Sauce and Cuscus
+</a></p>
+<p><a href="./recipes/chicken-teriyaki.html" target="_blank" rel="noopener noreferrer">Chicken Teriyaki with Asparagus</a></p>
     </body>
 </html>
