--- a/recipes/tuna.html
+++ b/recipes/tuna.html
@@ -7,9 +7,9 @@ Tuna Steak
         </title>
     </head>
     <body>
-<h1>Tuna steaks with mushroom sauce and cuscus</h1>
+<h1>Tuna Steaks with Mushroom Sauce and Cuscus</h1>
+<p>This recipe will delight anyone who tries it.</p>
 <img src="../recipes/steak.jpg" alt="A tuna steak" width="300" height="300">
-<p>This tuna steak contains mushroom sauce and cuscus. It's perfect for inviting your parents or friends over. </p>
 <h3>Ingredients</h3>
 <ul>
     <li>4 tuna steaks</li>
@@ -30,6 +30,7 @@ Tuna Steak
     <li>300 ml of water</li>
 
 </ul>
+<h3>Directions</h3>
 <ol>
     <li>Heat up a big pan and add the olive oil, the powdered garlic, powdered onion, oregano, black pepper, salt, the chopped onions and the mushrooms. Cook until it the onions and mushrooms become soft. </li>
     <li>Take away the mushrooms and onions to a different pot.</li>
