edited ../index.html and created salmon-ceviche.html and ceviche.jpg

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@ Odin Recipes
 <p><a href="./recipes/tuna.html" target="_blank" rel="noopener noreferrer">Tuna Steaks with Mushroom Sauce and Cuscus
 </a></p>
 <p><a href="./recipes/chicken-teriyaki.html" target="_blank" rel="noopener noreferrer">Chicken Teriyaki with Asparagus</a></p>
-    </body>
+ <p><a href="./recipes/salmon-ceviche.html" target="_blank" rel="noopener noreferrer">Salmon Ceviche</a></p> 
+</body>
 </html>
