--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
         <title>
 Odin Recipes
         </title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-<h1>
+<h1 class="header">
     Odin Recipes
 </h1>
 <p><a href="./recipes/tuna.html" target="_blank" rel="noopener noreferrer">Tuna Steaks with Mushroom Sauce and Cuscus
