modified ../index.html and ../styles.css

--- a/index.html
+++ b/index.html
@@ -8,12 +8,26 @@ Odin Recipes
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-<h1 class="header">
+<h1 id="header">
     Odin Recipes
 </h1>
-<p><a href="./recipes/tuna.html" target="_blank" rel="noopener noreferrer">Tuna Steaks with Mushroom Sauce and Cuscus
-</a></p>
-<p><a href="./recipes/chicken-teriyaki.html" target="_blank" rel="noopener noreferrer">Chicken Teriyaki with Asparagus</a></p>
- <p><a href="./recipes/salmon-ceviche.html" target="_blank" rel="noopener noreferrer">Salmon Ceviche</a></p> 
+<div class="tunadish">
+    <p>
+    <img src="./recipes/steak.jpg" alt="Tuna Steak" id="tuna-picture"> <a href="./recipes/tuna.html" target="_blank" rel="noopener noreferrer" id="linkone">Tuna Steaks with Mushroom Sauce and Cuscus
+</a>
+<p>This recipe will delight anyone who tries it.</p>
+</p>
+</div>
+
+<div class="chickendish">
+    <p>
+        <img src="./recipes/teriyaki.webp" alt="Teriyaki Chicken"  id="teriyaki-picture"> <a href="./recipes/chicken-teriyaki.html" target="_blank" rel="noopener noreferrer" id="linktwo">Chicken Teriyaki with Asparagus</a>
+  <p>This is delicious! Teriyaki chicken with steamed asparagus and Swiss cheese will please your whole family!</p>  </p>
+</div>
+ <div class="salmondish">
+    <p>
+        <img src="./recipes/ceviche.jpg" alt="Salmon Ceviche" id="salmon-picture"> <a href="./recipes/salmon-ceviche.html" target="_blank" rel="noopener noreferrer" id="linkthree">Salmon Ceviche</a>
+<p>Thin slices of salmon lounge in a lime, garlic, and cilantro marinade for four hours before being served with chips, rice or tortillas.</p>
+</p></div>
 </body>
 </html>
