modified style of recipes/chicken-teriyaki.html, recipes/chickenstyle.css and styles.css

--- a/recipes/chicken-teriyaki.html
+++ b/recipes/chicken-teriyaki.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="webpage">
     <head>
        <meta charset="utf-8">
        <title>
 Chicken Teriyaki with Asparagus
        </title> 
+       <link rel="stylesheet" href="../recipes/chickenstyle.css">
     </head>
     <body>
-        <h1>
+        <h1 id="header">
             Chicken Teriyaki with Asparagus
         </h1>
-        <p>This is delicious! Teriyaki chicken with steamed asparagus and Swiss cheese will please your whole family!    
+        <div class="box"> <p>This is delicious! Teriyaki chicken with steamed asparagus and Swiss cheese will please your whole family!    
         </p>
         <img src="../recipes/teriyaki.webp" width="300" height="300" alt="Chicken Teriyaki with Asparagus">
-        <h3>Ingredients</h3>
+       <h3>Ingredients</h3>
         <ul>
             <li>
                 ¾ cup honey teriyaki sauce
@@ -56,6 +57,6 @@ Chicken Teriyaki with Asparagus
     <li>
         Place 4 asparagus spears on each chicken breast, and top each breast with a slice of Swiss cheese. Return to oven, and continue baking 10 minutes, or until cheese is melted and chicken juices run clear.
     </li>
-</ol>
+</ol></div>
     </body>
 </html>
