modified  recipes/chicken-teriyaki.html  recipes/chickenstyle.css  recipes/salmon-ceviche.html recipes/salmonstyle.css recipes/tuna.html recipes/tunastyle.css

--- a/recipes/chicken-teriyaki.html
+++ b/recipes/chicken-teriyaki.html
@@ -57,6 +57,7 @@ Chicken Teriyaki with Asparagus
     <li>
         Place 4 asparagus spears on each chicken breast, and top each breast with a slice of Swiss cheese. Return to oven, and continue baking 10 minutes, or until cheese is melted and chicken juices run clear.
     </li>
-</ol></div>
+</ol>
+<a href="../index.html">Return to Odin Recipes</a></div>
     </body>
 </html>
