--- a/recipes/tuna.html
+++ b/recipes/tuna.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="webpage">
     <head>
         <meta charset="utf-8">
         <title>
 Tuna Steak
         </title>
+        <link rel="stylesheet" href="../recipes/tunastyle.css">
     </head>
     <body>
-<h1>Tuna Steaks with Mushroom Sauce and Cuscus</h1>
-<p>This recipe will delight anyone who tries it.</p>
+<h1 id="header">Tuna Steaks with Mushroom Sauce and Cuscus</h1>
+<div class="box">
+    <p>This recipe will delight anyone who tries it.</p>
 <img src="../recipes/steak.jpg" alt="A tuna steak" width="300" height="300">
 <h3>Ingredients</h3>
 <ul>
@@ -39,5 +41,7 @@ Tuna Steak
     <li>in a small pot put the cuscus (do not put over fire), one pinch of salt, add the water and 1 tbsp. of butter, stir until the butter is melted and close the pot with a lid</li>
     <li>After 5 minutes the cuscus will be ready and you can serve the tuna steak with mushroom sauce and cuscus.</li>
 </ol>
+<a href="../index.html">Return to Odin Recipes</a>
+</div>
     </body>
 </html>
