--- a/index.html
+++ b/index.html
@@ -12,22 +12,25 @@ Odin Recipes
     Odin Recipes
 </h1>
 <div class="tunadish">
-    <p>
-    <img src="./recipes/steak.jpg" alt="Tuna Steak" id="tuna-picture"> <a href="./recipes/tuna.html" target="_blank" rel="noopener noreferrer" id="linkone">Tuna Steaks with Mushroom Sauce and Cuscus
+    <img src="./recipes/steak.jpg" alt="Tuna Steak" id="tuna-picture">
+  <div id="box1">  <a href="./recipes/tuna.html" target="_blank" rel="noopener noreferrer" id="linkone">Tuna Steaks with Mushroom Sauce and Cuscus
 </a>
-<p>This recipe will delight anyone who tries it.</p>
-</p>
+ <p>This recipe will delight anyone who tries it.</p> </div>
 </div>
 
 <div class="chickendish">
-    <p>
-        <img src="./recipes/teriyaki.webp" alt="Teriyaki Chicken"  id="teriyaki-picture"> <a href="./recipes/chicken-teriyaki.html" target="_blank" rel="noopener noreferrer" id="linktwo">Chicken Teriyaki with Asparagus</a>
-  <p>This is delicious! Teriyaki chicken with steamed asparagus and Swiss cheese will please your whole family!</p>  </p>
+ 
+        <img src="./recipes/teriyaki.webp" alt="Teriyaki Chicken"  id="teriyaki-picture">
+      <div id="box2"> <a href="./recipes/chicken-teriyaki.html" target="_blank" rel="noopener noreferrer" id="linktwo">Chicken Teriyaki with Asparagus</a>
+  <p>This is delicious! Teriyaki chicken with steamed asparagus and Swiss cheese will please your whole family!</p> </div>
 </div>
- <div class="salmondish">
-    <p>
-        <img src="./recipes/ceviche.jpg" alt="Salmon Ceviche" id="salmon-picture"> <a href="./recipes/salmon-ceviche.html" target="_blank" rel="noopener noreferrer" id="linkthree">Salmon Ceviche</a>
+ 
+<div class="salmondish">
+
+        <img src="./recipes/ceviche.jpg" alt="Salmon Ceviche" id="salmon-picture">
+      <div id="box3">  <a href="./recipes/salmon-ceviche.html" target="_blank" rel="noopener noreferrer" id="linkthree">Salmon Ceviche</a>
 <p>Thin slices of salmon lounge in a lime, garlic, and cilantro marinade for four hours before being served with chips, rice or tortillas.</p>
-</p></div>
+</div>
+</div>
 </body>
 </html>
