modified  recipes/chicken-teriyaki.html recipes/chickenstyle.css recipes/salmon-ceviche.html recipes/salmonstyle.css recipes/tuna.html  recipes/tunastyle.css

--- a/recipes/chicken-teriyaki.html
+++ b/recipes/chicken-teriyaki.html
@@ -9,9 +9,11 @@ Chicken Teriyaki with Asparagus
     </head>
     <body>
         <h1 id="header">
-            Chicken Teriyaki with Asparagus
+            Odin Recipes
         </h1>
-        <div class="box"> <p>This is delicious! Teriyaki chicken with steamed asparagus and Swiss cheese will please your whole family!    
+        <div class="box"> 
+            <h2>Chicken Teriyaki with Asparagus</h2>
+            <p>This is delicious! Teriyaki chicken with steamed asparagus and Swiss cheese will please your whole family!    
         </p>
         <img src="../recipes/teriyaki.webp" width="300" height="300" alt="Chicken Teriyaki with Asparagus">
        <h3>Ingredients</h3>
