--- a/recipes/salmon-ceviche.html
+++ b/recipes/salmon-ceviche.html
@@ -9,9 +9,11 @@ Salmon Ceviche
     </head>
     <body>
         <h1 id="header">
-Salmon Ceviche
+Odin Recipes
         </h1>
-       <div class="box"><p>Thin slices of salmon lounge in a lime, garlic, and cilantro marinade for four hours before being served with chips, rice or tortillas. Fresh ingredients are what makes this simple, easy dish amazing. The hardest part of it is the slicing and dicing. With minimal effort and no cooking you'll get rave reviews. This can just as easily pass for an appetizer in smaller portions.
+       <div class="box">
+        <h2>Salmon Ceviche</h2>
+        <p>Thin slices of salmon lounge in a lime, garlic, and cilantro marinade for four hours before being served with chips, rice or tortillas. Fresh ingredients are what makes this simple, easy dish amazing. The hardest part of it is the slicing and dicing. With minimal effort and no cooking you'll get rave reviews. This can just as easily pass for an appetizer in smaller portions.
         </p>
         <img src="./ceviche.jpg" height="300" width="300" alt="Ceviche Salmon">
         <h3>Ingredients</h3>
