--- a/recipes/tuna.html
+++ b/recipes/tuna.html
@@ -8,8 +8,9 @@ Tuna Steak
         <link rel="stylesheet" href="../recipes/tunastyle.css">
     </head>
     <body>
-<h1 id="header">Tuna Steaks with Mushroom Sauce and Cuscus</h1>
+<h1 id="header">Odin Recipes</h1>
 <div class="box">
+    <h2>Tuna Steaks with Mushroom Sauce and Cuscus</h2>
     <p>This recipe will delight anyone who tries it.</p>
 <img src="../recipes/steak.jpg" alt="A tuna steak" width="300" height="300">
 <h3>Ingredients</h3>
