modified stylesheet of all elements, added new backgrounds and changed margins

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@ Odin Recipes
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-<h1 id="header">
-    Odin Recipes
-</h1>
+<header><a href="./index.html" id="linklogo"><img src="./recipes/https___curricular.dev_assets_images_platforms_odin_project.png" alt="logo" id="logo">Odin Recipes</a></header>
 <div class="tunadish">
     <img src="./recipes/steak.jpg" alt="Tuna Steak" id="tuna-picture">
   <div id="box1">  <a href="./recipes/tuna.html" target="_blank" rel="noopener noreferrer" id="linkone">Tuna Steaks with Mushroom Sauce and Cuscus
