--- a/recipes/chicken-teriyaki.html
+++ b/recipes/chicken-teriyaki.html
@@ -8,9 +8,12 @@ Chicken Teriyaki with Asparagus
        <link rel="stylesheet" href="../recipes/chickenstyle.css">
     </head>
     <body>
-        <h1 id="header">
-            Odin Recipes
-        </h1>
+        <header>
+            <a href="../index.html" id="linklogo">
+                <img src="./https___curricular.dev_assets_images_platforms_odin_project.png" alt="logo" id="logo">
+                Odin Recipes
+            </a>
+        </header>
         <div class="box"> 
             <h2>Chicken Teriyaki with Asparagus</h2>
             <p>This is delicious! Teriyaki chicken with steamed asparagus and Swiss cheese will please your whole family!    
