--- a/recipes/salmon-ceviche.html
+++ b/recipes/salmon-ceviche.html
@@ -8,9 +8,12 @@ Salmon Ceviche
         <link rel="stylesheet" href="../recipes/salmonstyle.css">
     </head>
     <body>
-        <h1 id="header">
-Odin Recipes
-        </h1>
+        <header>
+            <a href="../index.html" id="linklogo">
+                <img src="./https___curricular.dev_assets_images_platforms_odin_project.png" alt="logo" id="logo">
+                Odin Recipes
+            </a>
+        </header>
        <div class="box">
         <h2>Salmon Ceviche</h2>
         <p>Thin slices of salmon lounge in a lime, garlic, and cilantro marinade for four hours before being served with chips, rice or tortillas. Fresh ingredients are what makes this simple, easy dish amazing. The hardest part of it is the slicing and dicing. With minimal effort and no cooking you'll get rave reviews. This can just as easily pass for an appetizer in smaller portions.
